src/grammar.txt
hexmap              ::= { statement } ;
statement           ::= metadata | hex_definition | path_definition | empty_line ;
empty_line          ::= { whitespace } , newline ;
metadata            ::= key_value , { whitespace }, ":", { whitespace }, key_value , newline ;
key_value           ::= word , { whitespace , word } ;
hex_definition      ::= [ coordinate ], [ link ] , [ terrain ] , [ icon ] , [ label ] , newline ;
link				::= "[[" , word , "]]" , { whitespace } | ε ;
terrain    			::= word , { whitespace } | ε ;
icon       			::= word , { whitespace } | ε ;
label      			::= quoted_string | ε ;
path_definition     ::= coordinate_sequence , whitespace , path_type , [ label ] , newline ;
coordinate_sequence ::= coordinate , "-" , { coordinate , "-" }, coordinate ;
path_type           ::= word ;
coordinate          ::= digit , digit , digit , digit ;
word                ::= { letter | digit | special_char }+ ;
quoted_string       ::= "\"" , { letter | digit | special_char | whitespace }+ , "\"" ;
newline             ::= "\n" ;
whitespace          ::= " " | "\t" ;
letter              ::= "a" | "b" | "c" | ... | "z" | "A" | "B" | "C" | ... | "Z" ;
digit               ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
special_char        ::= any non-letter, non-digit, non-whitespace character ;
